# kaiju

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  VERIFICATION.md
.github/workflows/: ci.yml
crates/kaiju-adapters/: Cargo.toml
crates/kaiju-adapters/src/: claude.rs  claude_events.rs  claude_transcript.rs  codex.rs  custom.rs  gemini.rs  lib.rs  pricing.rs  registry.rs
crates/kaiju-cli/: Cargo.toml
crates/kaiju-cli/src/: client.rs  main.rs
crates/kaiju-core/: Cargo.toml
crates/kaiju-core/src/: adapter.rs  agent.rs
crates/kaiju-daemon/: Cargo.toml
crates/kaiju-daemon/assets/: dashboard-utils.js  dashboard-utils.test.js  dashboard.js
crates/kaiju-daemon/src/: api.rs  auth.rs  batch.rs  dashboard.rs  devices.rs  files.rs  judge.rs  lib.rs  logstore.rs  main.rs  monitor.rs  net.rs  notify.rs  pair_api.rs  pairing.rs  persist.rs  reconcile.rs  scheduler.rs  server.rs  settings.rs  store.rs  task_store.rs  terminal.rs  tmux.rs  worktree.rs
crates/kaiju-daemon/tests/: api.rs
crates/nexus-adapters/: Cargo.toml
crates/nexus-adapters/src/: binary.rs  claude.rs  claude_events.rs  codex.rs  gemini.rs  lib.rs  registry.rs
crates/nexus-cli/: Cargo.toml
crates/nexus-cli/src/: client.rs  main.rs
crates/nexus-core/: Cargo.toml
crates/nexus-core/src/: adapter.rs  agent.rs  error.rs  lib.rs  task.rs
crates/nexus-daemon/: Cargo.toml
crates/nexus-daemon/src/: api.rs  auth.rs  batch.rs  dashboard.rs  lib.rs  main.rs  monitor.rs  notify.rs  persist.rs  reconcile.rs  scheduler.rs  server.rs  store.rs  task_store.rs  terminal.rs  tmux.rs  worktree.rs
crates/nexus-daemon/tests/: api.rs
docs/superpowers/plans/: 2026-06-03-browser-terminal.md  2026-06-11-lan-exposure-device-pairing.md  2026-06-12-adopt-session.md  2026-06-12-compare-across-clis.md  2026-06-12-compare-judge.md  2026-06-12-judge-test-signal.md
docs/superpowers/specs/: 2026-06-03-browser-terminal-design.md  2026-06-12-adopt-session-design.md  2026-06-12-compare-across-clis-design.md  2026-06-12-compare-judge-design.md
scripts/: e2e.sh  smoke.sh
