[workspace]
members = [
    "crates/kaiju-core",
    "crates/kaiju-adapters",
    "crates/kaiju-daemon",
    "crates/kaiju-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ashish Thete <thete.ashish1@gmail.com>"]

[workspace.dependencies]
kaiju-core = { path = "crates/kaiju-core" }
kaiju-adapters = { path = "crates/kaiju-adapters" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
constant_time_eq = "0.3"
