[package]
name = "kaiju-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kaiju"
path = "src/main.rs"

[dependencies]
kaiju-core = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
