[package]
name = "kaiju-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kaiju-daemon"
path = "src/main.rs"

[dependencies]
kaiju-core = { workspace = true }
kaiju-adapters = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true, features = ["ws"] }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
qrcode = { workspace = true }
constant_time_eq = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
